--- a/musicas.html
+++ b/musicas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="Topo">Minhas 5 Músicas Favoritas no Momento</h1>
-    <p><a href="principal.html">Sobre mim</a></p>
+    <p><a href="index.html">Sobre mim</a></p>
     <h2>Goo Goo Dolls - Iris</h2>
     <p>Essa com certeza é a minha música favorita de todas. confira o vídeo abaixo:</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NdYWuo9OFAw?si=ZsyD0Aq7tJuqbiKj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
