--- a/receita.html
+++ b/receita.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="Topo">Brownie</h1>
-    <p><a href="principal.html">Sobre mim</a></p>
+    <p><a href="index.html">Sobre mim</a></p>
     <img src="imagens/brownie.jpg" alt="Imagem brownie">
     <h2>Ingredientes</h2>
     <p>3 ovos</p>
